--- a/DeliveryBackend/.env
+++ b/DeliveryBackend/.env
@@ -1,2 +1,6 @@
 MONGO_URI="mongodb+srv://workspacemvsi:3fmr4tSsivTHor4I@cluster06.569xw8k.mongodb.net/clinikally"
 PORT=5000
+JWT_SECRET="SHY23FDA45G2G1K89KH5sec4H8KUTF85ret"
+EMAIL='shyamsaran0206@gmail.com'
+PASS='vyki efil wiww ybav'
+
